--- a/libraries/libraries/static/scss/components/misc/_target.scss
+++ b/libraries/libraries/static/scss/components/misc/_target.scss
@@ -1,9 +1,13 @@
+@use "../../settings/breakpoints";
+@use "../../settings/component-specific";
+@use "../../utilities/respond";
+
 // https://moderncss.dev/modern-css-for-dynamic-component-based-architecture/#css-reset-additions
 // scroll target offset, give anchor links an offset equal to the height of the sticky menu
 :target {
-    scroll-padding-block-start: $header-height-small;
+    scroll-padding-block-start: component-specific.$header-height-small;
 
-    @include respond($break-medium) {
-        scroll-padding-block-start: $header-height-large;
+    @include respond.respond(breakpoints.$break-medium) {
+        scroll-padding-block-start: component-specific.$header-height-large;
     }
 }
