--- a/libraries/libraries/static/scss/components/search/_search-list.scss
+++ b/libraries/libraries/static/scss/components/search/_search-list.scss
@@ -1,12 +1,16 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../utilities/respond";
+
 // ===========================================
 // The search results wrapping ul
 // ===========================================
 
 .search-list {
-    border-top: 1px solid black(.1);
+    border-top: 1px solid colors.black(.1);
     padding: 20px 0;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         border-top: 0;
         // offset absolutly positioned
         // .search-box__number-results
