--- a/libraries/libraries/static/scss/bootstrap/_code.scss
+++ b/libraries/libraries/static/scss/bootstrap/_code.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 //
 // Code (inline and block)
 // --------------------------------------------------
@@ -8,25 +10,25 @@ code,
 kbd,
 pre,
 samp {
-  font-family: $font-family-monospace;
+  font-family: variables.$font-family-monospace;
 }
 
 // Inline code
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: $code-color;
-  background-color: $code-bg;
-  border-radius: $border-radius-base;
+  color: variables.$code-color;
+  background-color: variables.$code-bg;
+  border-radius: variables.$border-radius-base;
 }
 
 // User input typically entered via keyboard
 kbd {
   padding: 2px 4px;
   font-size: 90%;
-  color: $kbd-color;
-  background-color: $kbd-bg;
-  border-radius: $border-radius-small;
+  color: variables.$kbd-color;
+  background-color: variables.$kbd-bg;
+  border-radius: variables.$border-radius-small;
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
 
   kbd {
@@ -40,16 +42,16 @@ kbd {
 // Blocks of code
 pre {
   display: block;
-  padding: math.div($line-height-computed - 1px, 2);
-  margin: 0 0 math.div($line-height-computed, 2);
-  font-size: $font-size-base - 1px; // 14px to 13px
-  line-height: $line-height-base;
+  padding: math.div(variables.$line-height-computed - 1px, 2);
+  margin: 0 0 math.div(variables.$line-height-computed, 2);
+  font-size: variables.$font-size-base - 1px; // 14px to 13px
+  line-height: variables.$line-height-base;
   word-break: break-all;
   word-wrap: break-word;
-  color: $pre-color;
-  background-color: $pre-bg;
-  border: 1px solid $pre-border-color;
-  border-radius: $border-radius-base;
+  color: variables.$pre-color;
+  background-color: variables.$pre-bg;
+  border: 1px solid variables.$pre-border-color;
+  border-radius: variables.$border-radius-base;
 
   // Account for some code outputs that place code tags in pre tags
   code {
@@ -64,6 +66,6 @@ pre {
 
 // Enable scrollable blocks of code
 .pre-scrollable {
-  max-height: $pre-scrollable-max-height;
+  max-height: variables.$pre-scrollable-max-height;
   overflow-y: scroll;
 }
