--- a/libraries/libraries/static/scss/bootstrap/mixins/_grid-framework.scss
+++ b/libraries/libraries/static/scss/bootstrap/mixins/_grid-framework.scss
@@ -1,3 +1,6 @@
+@use "sass:math";
+@use "../variables";
+
 // Framework grid generation
 //
 // Used only by Bootstrap to generate the correct number of grid classes given
@@ -5,7 +8,7 @@
 
 // [converter] This is defined recursively in LESS, but Sass supports real loops
 @mixin make-grid-columns($i: 1, $list: ".col-xs-#{$i}, .col-sm-#{$i}, .col-md-#{$i}, .col-lg-#{$i}") {
-  @for $i from (1 + 1) through $grid-columns {
+  @for $i from (1 + 1) through variables.$grid-columns {
     $list: "#{$list}, .col-xs-#{$i}, .col-sm-#{$i}, .col-md-#{$i}, .col-lg-#{$i}";
   }
   #{$list} {
@@ -13,15 +16,15 @@
     // Prevent columns from collapsing when empty
     min-height: 1px;
     // Inner gutter via padding
-    padding-left:  ceil(($grid-gutter-width / 2));
-    padding-right: floor(($grid-gutter-width / 2));
+    padding-left:  math.ceil((variables.$grid-gutter-width / 2));
+    padding-right: math.floor((variables.$grid-gutter-width / 2));
   }
 }
 
 
 // [converter] This is defined recursively in LESS, but Sass supports real loops
 @mixin float-grid-columns($class, $i: 1, $list: ".col-#{$class}-#{$i}") {
-  @for $i from (1 + 1) through $grid-columns {
+  @for $i from (1 + 1) through variables.$grid-columns {
     $list: "#{$list}, .col-#{$class}-#{$i}";
   }
   #{$list} {
@@ -33,12 +36,12 @@
 @mixin calc-grid-column($index, $class, $type) {
   @if ($type == width) and ($index > 0) {
     .col-#{$class}-#{$index} {
-      width: percentage(($index / $grid-columns));
+      width: math.percentage(($index / variables.$grid-columns));
     }
   }
   @if ($type == push) and ($index > 0) {
     .col-#{$class}-push-#{$index} {
-      left: percentage(($index / $grid-columns));
+      left: math.percentage(($index / variables.$grid-columns));
     }
   }
   @if ($type == push) and ($index == 0) {
@@ -48,7 +51,7 @@
   }
   @if ($type == pull) and ($index > 0) {
     .col-#{$class}-pull-#{$index} {
-      right: percentage(($index / $grid-columns));
+      right: math.percentage(($index / variables.$grid-columns));
     }
   }
   @if ($type == pull) and ($index == 0) {
@@ -58,7 +61,7 @@
   }
   @if ($type == offset) {
     .col-#{$class}-offset-#{$index} {
-      margin-left: percentage(($index / $grid-columns));
+      margin-left: math.percentage(($index / variables.$grid-columns));
     }
   }
 }
@@ -74,8 +77,8 @@
 // Create grid for specific class
 @mixin make-grid($class) {
   @include float-grid-columns($class);
-  @include loop-grid-columns($grid-columns, $class, width);
-  @include loop-grid-columns($grid-columns, $class, pull);
-  @include loop-grid-columns($grid-columns, $class, push);
-  @include loop-grid-columns($grid-columns, $class, offset);
+  @include loop-grid-columns(variables.$grid-columns, $class, width);
+  @include loop-grid-columns(variables.$grid-columns, $class, pull);
+  @include loop-grid-columns(variables.$grid-columns, $class, push);
+  @include loop-grid-columns(variables.$grid-columns, $class, offset);
 }
