--- a/libraries/libraries/static/scss/bootstrap/mixins/_nav-vertical-align.scss
+++ b/libraries/libraries/static/scss/bootstrap/mixins/_nav-vertical-align.scss
@@ -1,9 +1,11 @@
+@use "../variables";
+
 // Navbar vertical align
 //
 // Vertically center elements in the navbar.
 // Example: an element has a height of 30px, so write out `.navbar-vertical-align(30px);` to calculate the appropriate top margin.
 
 @mixin navbar-vertical-align($element-height) {
-  margin-top: (($navbar-height - $element-height) / 2);
-  margin-bottom: (($navbar-height - $element-height) / 2);
+  margin-top: ((variables.$navbar-height - $element-height) / 2);
+  margin-bottom: ((variables.$navbar-height - $element-height) / 2);
 }
