--- a/libraries/libraries/static/scss/components/blog/_blog-post.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-post.scss
@@ -1,3 +1,8 @@
+@use "../../bootstrap/variables";
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../utilities/respond";
+
 // ========================================
 // Blog post content section
 // ========================================
@@ -5,13 +10,13 @@
 .blog-post {
     padding: 0 15px 15px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         max-width: 640px;
         padding: 0 30px 30px;
         width: 80%;
     }
 
-    @include respond($break-large) {
+    @include respond.respond(breakpoints.$break-large) {
         left: 260px;
         position: relative;
     }
@@ -25,7 +30,7 @@
 }
 
 .blog-post__image-description {
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 14px;
     line-height: 1.3em;
     margin: 0 0 15px;
@@ -33,7 +38,7 @@
     position: relative;
     top: -10px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         width: 60%;
     }
 }
@@ -46,15 +51,15 @@
 // vary color by section
 .page--blog-page .blog-post__title-wrapper,
 .page--about-us .blog-post__title-wrapper {
-    border-left: 2px solid $green;
+    border-left: 2px solid colors.$green;
 }
 
 .page--collections .blog-post__title-wrapper {
-    border-left: 2px solid $purple;
+    border-left: 2px solid colors.$purple;
 }
 
 .page--services .blog-post__title-wrapper {
-    border-left: 2px solid $blue;
+    border-left: 2px solid colors.$blue;
 }
 
 .blog-post__date {
@@ -70,25 +75,25 @@
     letter-spacing: .03em;
     width: 60%;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 28px;
         width: 100%;
     }
 }
 
 .blog-post__subtitle {
-    font-family: $font-family-sans-serif;
+    font-family: variables.$font-family-sans-serif;
     font-size: 16px;
     font-weight: 700;
     margin: 0 0 15px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 20px;
     }
 }
 
 .blog-post__paragraph {
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 16px;
     font-weight: 300;
     line-height: 1.4em;
@@ -103,19 +108,19 @@
 // vary color by section
 .page--blog-page .blog-post__quote,
 .page--about-us .blog-post__quote {
-    border-left: 2px solid $green;
+    border-left: 2px solid colors.$green;
 }
 
 .page--collections .blog-post__quote {
-    border-left: 2px solid $purple;
+    border-left: 2px solid colors.$purple;
 }
 
 .page--services .blog-post__quote {
-    border-left: 2px solid $blue;
+    border-left: 2px solid colors.$blue;
 }
 
 .blog-post__row {
-    @include respond($break-large) {
+    @include respond.respond(breakpoints.$break-large) {
         align-items: center;
         display: flex;
 
@@ -163,7 +168,7 @@
 
 .blog-post__quote-cite-name {
     display: block;
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
@@ -171,17 +176,17 @@
 
 .blog-post__quote-cite-position {
     display: block;
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 14px;
     line-height: 16px;
 }
 
 .blog-post__snippet {
-    background: $grey;
+    background: colors.$grey;
     margin: 0 0 20px;
     padding: 15px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         padding: 20px;
     }
 
@@ -193,23 +198,23 @@
 // vary color by section
 .page--blog-page .blog-post__snippet,
 .page--about-us .blog-post__snippet {
-    border-left: 2px solid $green;
+    border-left: 2px solid colors.$green;
 }
 
 .page--collections .blog-post__snippet {
-    border-left: 2px solid $purple;
+    border-left: 2px solid colors.$purple;
 }
 
 .page--services .blog-post__snippet {
-    border-left: 2px solid $blue;
+    border-left: 2px solid colors.$blue;
 }
 
 .blog-post__snippet-text {
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 14px;
     line-height: 1.4em;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 16px;
     }
 }
