--- a/libraries/libraries/static/scss/components/blog/_blog-sidebar.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-sidebar.scss
@@ -1,3 +1,7 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../utilities/respond";
+
 // ========================================
 // Blog page sidebar component
 // ========================================
@@ -5,8 +9,8 @@
 .blog-sidebar {
     padding: 0 0 15px;
 
-    @include respond($break-large) {
-        border-right: 1px solid black(.1);
+    @include respond.respond(breakpoints.$break-large) {
+        border-right: 1px solid colors.black(.1);
         padding: 0 20px 15px 0;
         position: fixed;
         transition: top 0;
@@ -17,7 +21,7 @@
 .blog-sidebar__content {
     display: none;
 
-    @include respond($break-large) {
+    @include respond.respond(breakpoints.$break-large) {
 
         // We use important here to *make sure* the
         // sidebar is visable on large screens. This
@@ -33,12 +37,12 @@
 .blog-sidebar__list {
     padding: 0 15px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         display: flex;
         flex-wrap: wrap;
     }
 
-    @include respond($break-large) {
+    @include respond.respond(breakpoints.$break-large) {
         max-height: calc(100vh - 200px);
         overflow: auto;
         padding: 0;
