--- a/libraries/libraries/static/scss/components/collections/_collections-title.scss
+++ b/libraries/libraries/static/scss/components/collections/_collections-title.scss
@@ -1,3 +1,6 @@
+@use "../../settings/breakpoints";
+@use "../../utilities/respond";
+
 // ========================================
 // Collections page title element
 // ========================================
@@ -7,7 +10,7 @@
     font-weight: 700;
     margin: 0 0 24px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 28px;
         margin: 0 0 30px;
     }
