--- a/libraries/libraries/static/scss/components/exhibits/_banner.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_banner.scss
@@ -1,14 +1,21 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../settings/font-families";
+@use "../../settings/vars";
+@use "../../utilities/respond";
+@use "settings";
+
 // ===================================
 // "Banner" template style
 // Header has one large hero image
 // ===================================
 .banner {
     margin: 0 auto 2em;
-    max-width: $site-max-width;
+    max-width: breakpoints.$site-max-width;
     position: relative;
     width: 100%;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         border: 0;
         // unclear to me why there's a slight gap between <header>
         // and <main> on laptop-sized screens
@@ -17,24 +24,24 @@
 }
 
 .banner--image {
-    z-index: $exhib-banner-img-z;
+    z-index: settings.$exhib-banner-img-z;
 }
 
 .banner--title {
-    background: $white;
-    font-family: $font-family-sans-serif;
+    background: colors.$white;
+    font-family: font-families.$font-family-sans-serif;
     font-size: 150%;
     font-weight: 700;
     line-height: 1.3;
     margin: -2em 0 0;
     max-width: 80%;
-    padding: 1em $wrapper-default-horizontal-padding 0;
+    padding: 1em settings.$wrapper-default-horizontal-padding 0;
     position: relative;
-    z-index: $exhib-banner-title-z;
+    z-index: settings.$exhib-banner-title-z;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 250%;
         max-width: 50%;
-        padding: 1em $wrapper-medium-horizontal-padding 0;
+        padding: 1em vars.$wrapper-medium-horizontal-padding 0;
     }
 }
