--- a/libraries/libraries/static/scss/components/exhibits/_foursquare.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_foursquare.scss
@@ -1,13 +1,19 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../settings/font-families";
+@use "../../utilities/respond";
+@use "settings";
+
 // ===================================
 // "Foursquare" template style
 // Four square images set to the left of title
 // ===================================
 .foursquare {
     margin: 0 auto 2em;
-    max-width: $site-max-width;
+    max-width: breakpoints.$site-max-width;
     width: 100%;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         display: flex;
     }
 }
@@ -15,9 +21,9 @@
 .foursquare--images {
     // need 0 size or white space between images disrupts layout
     font-size: 0;
-    z-index: $exhib-banner-img-z;
+    z-index: settings.$exhib-banner-img-z;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         // again, fixes slight gap between <header> & <main> on medium screens
         position: relative;
         top: -3px;
@@ -33,23 +39,23 @@
 .foursquare--frontmatter {
     max-width: 80%;
     position: relative;
-    z-index: $exhib-banner-title-z;
+    z-index: settings.$exhib-banner-title-z;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         max-width: 50%;
     }
 }
 
 .foursquare--frontmatter__title {
-    background: $white;
-    font-family: $font-family-sans-serif;
+    background: colors.$white;
+    font-family: font-families.$font-family-sans-serif;
     font-size: 150%;
     font-weight: 700;
     line-height: 1.3;
     margin: -2em 0 0;
-    padding: 1em $wrapper-default-horizontal-padding 0;
+    padding: 1em settings.$wrapper-default-horizontal-padding 0;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 250%;
         margin: 45% -2em 0;
         max-width: 80%;
