--- a/libraries/libraries/static/scss/components/exhibits/_index.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_index.scss
@@ -1,14 +1,20 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../settings/font-families";
+@use "../../utilities/respond";
+@use "settings";
+
 // ===================================
 // Exhibit index page
 // ===================================
 .exhibits-index h1 {
-    font-family: $font-family-sans-serif;
+    font-family: font-families.$font-family-sans-serif;
     font-size: 200%;
     font-weight: 700;
     line-height: 1.3;
     padding: 1em 0 .5em;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 350%;
     }
 }
@@ -16,7 +22,7 @@
 .frontmatter {
     margin-bottom: 2em;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 110%;
         max-width: 50%;
     }
@@ -28,8 +34,8 @@
 }
 
 .exhibits--list__exhibit {
-    @include respond($break-medium) {
-        border-right: 1px solid $grey-border;
+    @include respond.respond(breakpoints.$break-medium) {
+        border-right: 1px solid settings.$grey-border;
         flex: 1 0 25%;
         margin-bottom: 2em;
         max-width: 25%;
@@ -48,16 +54,16 @@
     margin: 0 auto;
     z-index: 1;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         margin: 0;
     }
 }
 
 .exhibits--list__title {
-    background: $white;
-    color: $black;
+    background: colors.$white;
+    color: colors.$black;
     display: inline-block;
-    font-family: $font-family-sans-serif;
+    font-family: font-families.$font-family-sans-serif;
     font-size: 120%;
     font-weight: 700;
     line-height: 1.4;
@@ -65,7 +71,7 @@
     max-width: 80%;
     padding: 1em 2em 1em 0;
     position: relative;
-    text-decoration: underline $turquoise;
+    text-decoration: underline colors.$turquoise;
     z-index: 2;
 }
 
@@ -73,7 +79,7 @@
     display: block;
     margin-bottom: 2em;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 80%;
     }
 }
