--- a/libraries/libraries/static/scss/components/forms/_checkbox.scss
+++ b/libraries/libraries/static/scss/components/forms/_checkbox.scss
@@ -1,12 +1,14 @@
+@use "../../settings/colors";
+
 // ========================================
 // Custom checkbox styles
 // ========================================
 
 input[type='radio'] {
     appearance: none;
-    background: $black;
+    background: colors.$black;
     border-radius: 99px;
-    box-shadow: inset 0 0 0 10px $white, 0 0 0 2px black(.3);
+    box-shadow: inset 0 0 0 10px colors.$white, 0 0 0 2px colors.black(.3);
     height: 16px;
     outline: none;
     position: relative;
@@ -16,11 +18,11 @@ input[type='radio'] {
 
     &:hover,
     &:focus {
-        box-shadow: inset 0 0 0 10px $white, 0 0 0 2px $black;
+        box-shadow: inset 0 0 0 10px colors.$white, 0 0 0 2px colors.$black;
     }
 
     &:checked {
-        background: $black;
-        box-shadow: inset 0 0 0 4px $white, 0 0 0 2px $black;
+        background: colors.$black;
+        box-shadow: inset 0 0 0 4px colors.$white, 0 0 0 2px colors.$black;
     }
 }
