--- a/libraries/libraries/static/scss/components/header/_header.scss
+++ b/libraries/libraries/static/scss/components/header/_header.scss
@@ -1,31 +1,37 @@
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../settings/component-specific";
+@use "../../utilities/clearfix";
+@use "../../utilities/respond";
+
 // ===================================
 // Main website header. Contains the
 // logo, search and navigation.
 // ===================================
 
 .header {
-    background: $white;
-    border-bottom: 1px solid $header-border-color;
-    height: $header-height-small;
+    background: colors.$white;
+    border-bottom: 1px solid component-specific.$header-border-color;
+    height: component-specific.$header-height-small;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 100;
 
-    @include clearfix;
+    @include clearfix.clearfix;
 
-    @include respond($break-medium) {
-        height: $header-height-large;
+    @include respond.respond(breakpoints.$break-medium) {
+        height: component-specific.$header-height-large;
     }
 }
 
 // Make the header 1px smaller on the home
 // to remove white border under buttons (hack).
 .page--home .header {
-    height: $header-height-small - 1px;
+    height: component-specific.$header-height-small - 1px;
 
-    @include respond($break-medium) {
-        height: $header-height-large - 1px;
+    @include respond.respond(breakpoints.$break-medium) {
+        height: component-specific.$header-height-large - 1px;
     }
 }
 
@@ -51,16 +57,16 @@
 }
 
 .header__nav-link {
-    border-bottom: $nav-border-bottom solid transparent;
-    border-left: 1px solid $header-border-color;
+    border-bottom: component-specific.$nav-border-bottom solid transparent;
+    border-left: 1px solid component-specific.$header-border-color;
     display: block;
     float: right;
-    height: $header-height-small;
+    height: component-specific.$header-height-small;
     position: relative;
     transition: background .3s ease;
-    width: $header-height-small;
+    width: component-specific.$header-height-small;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         // borders for search icon which is still visible
         border: 1px solid transparent;
         display: none;
@@ -68,41 +74,41 @@
 }
 
 .header__nav-link:not(.header__nav-link--is-active):hover {
-    border-bottom: $nav-border-bottom solid $black;
+    border-bottom: component-specific.$nav-border-bottom solid colors.$black;
 }
 
 .header__nav-link--is-active {
-    border-bottom-color: $white;
+    border-bottom-color: colors.$white;
 
-    @include respond($break-medium) {
-        background: $white;
-        border-left-color: black(.1);
-        border-right-color: black(.1);
-        border-top-color: black(.1);
+    @include respond.respond(breakpoints.$break-medium) {
+        background: colors.$white;
+        border-left-color: colors.black(.1);
+        border-right-color: colors.black(.1);
+        border-top-color: colors.black(.1);
         z-index: 999;
     }
 }
 
 // Search modifier
 .header__nav-link--search {
-    @include respond($break-medium) {
-        background: $white;
+    @include respond.respond(breakpoints.$break-medium) {
+        background: colors.$white;
         display: block;
-        height: $header-height-large - 20px;
+        height: component-specific.$header-height-large - 20px;
         position: absolute;
         right: 0;
         top: 19px; // show border bottom
         width: 50px;
 
         &.header__nav-link--is-active {
-            height: $header-height-large - 28px;
+            height: component-specific.$header-height-large - 28px;
         }
     }
 }
 
 .page--search .header__nav-link--search.header__nav-link--is-active {
-    @include respond($break-medium) {
-        border-bottom: $nav-border-bottom solid $black;
+    @include respond.respond(breakpoints.$break-medium) {
+        border-bottom: component-specific.$nav-border-bottom solid colors.$black;
         border-left: 0;
         border-right: 0;
         border-top: 0;
@@ -128,7 +134,7 @@
     transform: translate(-50%, -50%);
     width: 40px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         height: 30px;
         top: 6px;
         transform: translateX(-50%);
