--- a/libraries/libraries/static/scss/components/misc/_link.scss
+++ b/libraries/libraries/static/scss/components/misc/_link.scss
@@ -1,3 +1,5 @@
+@use "../../settings/colors";
+
 // ========================================
 // Inline page links
 // ========================================
@@ -6,12 +8,12 @@
 .service-row-item__text-wrapper {
     a[href] {
         border-bottom: 2px solid transparent;
-        color: $ccaBlue;
+        color: colors.$ccaBlue;
         text-decoration: none;
         transition: border .3s ease;
     }
 
     a[href]:hover {
-        border-bottom-color: $ccaBlue;
+        border-bottom-color: colors.$ccaBlue;
     }
 }
