--- a/libraries/libraries/static/scss/components/misc/_page.scss
+++ b/libraries/libraries/static/scss/components/misc/_page.scss
@@ -1,18 +1,24 @@
+@use "../../bootstrap/variables";
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../settings/component-specific";
+@use "../../utilities/respond";
+
 // ========================================
 // Page is a class attached to the <body>
 // element.
 // ========================================
 
 .page {
-    background: $white;
-    font-family: $font-family-sans-serif;
+    background: colors.$white;
+    font-family: variables.$font-family-sans-serif;
     // non-standard, autoprefixer can't handle this property because the values
     // differ with each implementation (W3C, Firefox, Chrome)
     // sass-lint:disable no-misspelled-properties
     font-smooth: always;
     // sass-lint:enable no-misspelled-properties
     min-width: 360px;
-    padding-top: $header-height-small;
+    padding-top: component-specific.$header-height-small;
     text-rendering: optimizeLegibility;
     // sass-lint:disable no-duplicate-properties
     text-rendering: geometricPrecision;
@@ -20,21 +26,21 @@
 
     // push page body down if alert banner is present, not necessary on home page
     &--with-alert:not(.page--home) {
-        padding-top: $header-height-small + $alert-max-height;
+        padding-top: component-specific.$header-height-small + component-specific.$alert-max-height;
     }
 
-    @include respond($break-medium) {
-        padding-top: $header-height-large;
+    @include respond.respond(breakpoints.$break-medium) {
+        padding-top: component-specific.$header-height-large;
 
         &--with-alert:not(.page--home) {
-            padding-top: $header-height-large + $alert-max-height;
+            padding-top: component-specific.$header-height-large + component-specific.$alert-max-height;
         }
     }
 }
 
 .page--overlay::after {
     animation: fade-in .3s ease;
-    background: black(.6);
+    background: colors.black(.6);
     bottom: 0;
     content: '';
     left: 0;
