--- a/libraries/libraries/static/scss/components/misc/_rich-text.scss
+++ b/libraries/libraries/static/scss/components/misc/_rich-text.scss
@@ -1,13 +1,17 @@
+@use "../../bootstrap/variables";
+@use "../../settings/breakpoints";
+@use "../../utilities/respond";
+
 // ========================================
 // Appearance of Wagtail "rich text" fields
 // ========================================
 
 .rich-text {
     h3 {
-        font: bold 14px $font-family-sans-serif;
+        font: bold 14px variables.$font-family-sans-serif;
         margin: 15px 0;
 
-        @include respond($break-medium) {
+        @include respond.respond(breakpoints.$break-medium) {
             font-size: 18px;
         }
     }
