--- a/libraries/libraries/static/scss/components/search/_search-pagination.scss
+++ b/libraries/libraries/static/scss/components/search/_search-pagination.scss
@@ -1,3 +1,6 @@
+@use "../../bootstrap/variables";
+@use "../../settings/colors";
+
 // ===========================================
 // The search results pagination component
 // ===========================================
@@ -8,7 +11,7 @@
 }
 
 .search-pagination__nav-item {
-    border-bottom: 2px solid $turquoise;
+    border-bottom: 2px solid colors.$turquoise;
     color: inherit;
     font-weight: 700;
     text-decoration: none;
@@ -29,7 +32,7 @@
 }
 
 .search-pagination__numbers {
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     margin: 0 auto;
 }
 
@@ -42,7 +45,7 @@
 }
 
 .search-pagination__number-link {
-    border-bottom: 1px solid $black;
+    border-bottom: 1px solid colors.$black;
     color: inherit;
     margin: 3px;
     text-decoration: none;
