--- a/libraries/libraries/static/scss/components/search/_search-result.scss
+++ b/libraries/libraries/static/scss/components/search/_search-result.scss
@@ -1,3 +1,8 @@
+@use "../../bootstrap/variables";
+@use "../../settings/breakpoints";
+@use "../../settings/colors";
+@use "../../utilities/respond";
+
 // ========================================
 // Search result item
 // ========================================
@@ -6,7 +11,7 @@
     display: flex;
     margin: 0 0 15px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         margin: 0 0 25px;
     }
 }
@@ -17,7 +22,7 @@
     height: 40px;
     width: 60px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         height: 70px;
         width: 105px;
     }
@@ -27,7 +32,7 @@
     flex: 1;
     padding: 0 10px;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         padding: 0 30px;
     }
 }
@@ -39,14 +44,14 @@
     padding: 0 0 3px;
     text-decoration: none;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 20px;
         margin: 0 0 10px;
     }
 }
 
 .search-result__link {
-    border-bottom: 2px solid $turquoise;
+    border-bottom: 2px solid colors.$turquoise;
     color: inherit;
     text-decoration: none;
 }
@@ -56,13 +61,13 @@
 }
 
 .search-result__text {
-    font-family: $font-family-serif;
+    font-family: variables.$font-family-serif;
     font-size: 12px;
     font-weight: 300;
     line-height: 1.4em;
     opacity: .8;
 
-    @include respond($break-medium) {
+    @include respond.respond(breakpoints.$break-medium) {
         font-size: 14px;
     }
 }
