--- a/libraries/categories/templates/categories/category_page.html
+++ b/libraries/categories/templates/categories/category_page.html
@@ -3,6 +3,8 @@
 {% block body_class %}page--{{ page.slug }}{% endblock %}
 
 {% block content %}
+    <h1 class="sr-only">{{ page.title }}</h1>
+
     <div class="wrapper">
         <ul class="services">
             {% for row in rows %}
